# model-training

./: .gitignore  README.md  dvc.yaml  pylintrc  pyproject.toml  requirements.txt  update_readme.py
.dvc/: config
.github/workflows/: linter.yml  pytest.yml  update_readme.yml
src/data/: download_dataset.py
src/model/: model_predict.py  model_train.py  upload_model.py
src/preprocessing/: preprocessing.py
tests/: fixtures.py  test_preprocessing.py  test_trained_model.py
tests/test_data/: char_index.joblib  test.txt  train.txt  val.txt  x_data.joblib  y_data.joblib
