[tool.poetry]
name = "CS4295-FinalProject"
version = "0.1.0"
description = "Final project for CS4295 Release Engineering for Machine Learning Applications"
authors = ["nickdubbel <nick.dubbeldam@live.nl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
joblib= "^1.4.0"
kaggle= "^1.6.12"
keras= "^3.3.3"
numpy= "^1.26.4"
scikit-learn= "^1.4.2"
scipy= "^1.13.0"
sklearn-preprocessing= "^0.1.0"
tensorflow= "^2.16.1"
dvc= "^3.50.1"
lib-ml = {git = "https://github.com/Release-Engineering-Group-13/lib-ml.git", rev = "v1.0.3"}
ellipsis = "^3.1.45"
dvc-gdrive = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
